src/style.css
@import url('https://fonts.googleapis.com/css2?family=Nixie+One&display=swap');
* { margin: 0; padding: 0; box-sizing: border-box; }

body 
{
    min-height: 100vh;
    background:#ffffff;
    display: flex;
    align-items: center;
    justify-content: center;
}

.win-bg 
{
    display: block;
    margin: 0 auto;
    border-radius: 16px;
    border:#504133 2px solid;
    width: 500px;
    height: 620px;
    object-fit: cover;
}

.toggle-bar
{
    display: flex;
    align-items: center;
    gap: 3px;
    background: #776652;
    border-radius: 2px;
    border: 2px solid #4d3820;
    padding: 3px;
    white-space: nowrap;
}

.toggle-bar button
{
    border: 2px solid transparent;
    background: transparent;
    border-radius: 0px;
    padding: 4px 10px;
    font-family: "Nixie One", system-ui;
    font-weight: 500;
    font-style: normal;
    font-size: 0.9rem;
    color: #fff1e3;
    cursor: pointer;
    transition: background 0.2s, color 0.2s;
}

.toggle-bar button:hover
{
    background: #d4b89627;
    border-radius: 2px;
    border: 2px solid #2e1b0b41;
}

.toggle-bar button.active
{
    background: #b16b6b; /*#836549*/
    color: #ffeedb;
    border: 2px solid #7a4747; /*#2e1b0b*/
}

.win-bg-wrapper
{
    position: relative;
    width: 780px;
    height: 620px;
    background: #aa977f;
    border-radius: 9px;
    border: 2px solid #4d3820;
    overflow: hidden;
}

.win-bg-wrapper .win-bg
{
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 9px;
}

.win-bg-wrapper .toggle-bar
{
    position: static;
    transform: none;
}

.snippet-panel
{
    position: absolute;
    top: 100px;
    right: 24px;
    width: 280px;
    bottom: 24px;
    background: #776652;
    border-radius: 0px;
    border: 2px solid #4d3820;
    padding: 6px;
    display: block;
    overflow-y: auto;
}

.snippet-panel.visible
{
    display: block;
}

.snippet-grid.active
{
    display: grid;
}

.snippet-grid
{
    display: none;
    grid-template-columns: repeat(3, 1fr);
    gap: 5px;
}

.snippet-grid img
{
    width: 100%;
    aspect-ratio: 1;
    object-fit: contain;
    border-radius: 5px;
    background: #ffffff;
    cursor: pointer;
    transition: background 0.2s, border-color 0.2s;
}

.snippet-grid img:hover
{
    border: none;
    outline: 1px solid #d4b89627;
}

.snippet-grid img.selected
{
    background: #fce0c7;
    border: 2px solid #2e1b0b;
}
.preview-box
{
    position: absolute;
    top: 100px;
    left: 24px;
    width: 420px;
    height: 420px; 
    background: #776652;
    border-radius: 0px;
    border: 2px solid #4d3820;
    overflow: hidden;
}
.toggle-wrapper
{
    position: absolute;
    top: 24px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    align-items: center;
    gap: 6px;
}
.info-btn
{
    background: #776652;
    border: 2px solid #4d3820;
    border-radius: 2px;
    padding: 4px 6px;
    color: #f1d9be;
    cursor: pointer;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}
.fullview-close
{
    position: absolute;
    inset: 0;
    background: #aa977f;
    display: none;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    padding: 24px;
    gap: 24px;
}

.fullview-close.visible
{
    display: flex;
}

.fullview-close-btn
{
    background: #b16b6b;
    border: 2px solid #7a4747;
    border-radius: 2px;
    color: #f1d9be;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    padding: 4px 10px;
}

.fullview-notes
{
    background: #776652;
    border: 2px solid #4d3820;
    border-radius: 2px;
    color: #fff2e3;
    font-family: "Nixie One", system-ui;
    font-size: 1rem;
    padding: 16px 20px;
    display: flex;
    flex-direction: column;
    text-decoration: none;
    gap: 7px;
    width: 100%;
    flex: 1;
}
.save-btn
{
    background: #b16b6b;
    border: 2px solid #7a4747;
    border-radius: 2px;
    color: #f1d9be;
    font-family: "Nixie One", system-ui;
    font-size: 0.9rem;
    padding: 6px 14px;
    cursor: pointer;
}

